# alephium-stream-api

./: .env  Cargo.toml  config.toml
crates/alephium-sdk/: Cargo.toml
crates/alephium-sdk/src/: client.rs  error.rs  lib.rs  utils.rs
crates/alephium-sdk/src/api/: contracts.rs  events.rs  mod.rs
crates/alephium-sdk/src/types/: contracts.rs  events.rs  mod.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: event.rs  lib.rs  stream.rs  token.rs
crates/route/: Cargo.toml
crates/route/src/: error.rs  lib.rs  stream.rs  token.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  lib.rs  stream.rs  token.rs
src/: main.rs
src/api/: otel.rs
src/watchdog/: alephium_sdk.rs  main.rs
