[package]
name = "alephium-stream-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
config = { path = "crates/config" }
model = { path = "crates/model" }
route = { path = "crates/route" }
service = { path = "crates/service" }
axum = { version = "0.7.5", features = ["macros"] }
mongodb = { version = "3.0.1", features = ["rustls-tls"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum.workspace = true
config.workspace = true
route.workspace = true
service.workspace = true
mongodb.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
