[package]
name = "alephium-stream-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/api/main.rs"

[[bin]]
name = "watchdog"
path = "src/watchdog/main.rs"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
config = { path = "crates/config" }
model = { path = "crates/model" }
route = { path = "crates/route" }
service = { path = "crates/service" }
alephium-sdk = { path = "crates/alephium-sdk" }
axum = { version = "0.7.5", features = ["macros"] }
mongodb = { version = "3.0.1", features = ["rustls-tls"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry-instrumentation-sdk = "0.19.0"
axum-tracing-opentelemetry = "0.19.0"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum.workspace = true
config.workspace = true
route.workspace = true
service.workspace = true
mongodb.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry = "0.25.0"
init-tracing-opentelemetry = { version = "0.20.0", features = ["jaeger", "tracing_subscriber_ext"] }
dotenv = "0.15.0"
bs58 = "0.5.1"
hex = "0.4.3"
