[package]
name = "alephium-sdk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
bs58 = "0.5.1"
hex = "0.4.3"
thiserror = "1.0.63"
async-trait = "0.1.82"
serde = { version = "1.0.210", features = ["derive", "rc"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
url = "2.5.2"
serde_json = "1.0.128"
