[package]
name = "route"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
axum.workspace = true
service.workspace = true
model.workspace = true
axum-tracing-opentelemetry.workspace = true
tracing.workspace = true
tracing-opentelemetry-instrumentation-sdk.workspace = true
